<resources>
    <string name="app_name">diversain</string>
    <string name="frase_do_negro_shiu">Descobrir um funcionário nescessário: 5 DiverSika’s</string>
    <string name="desconto_em_um_dos_nosso_n_servi_os_50_diversikas_s">Desconto em um dos nosso\n serviços: 50 DiverSikas\'s</string>
    <string name="descobrir_um_funcion_rio_n_nescess_rio_5_diversika_s">Descobrir um funcionário\n nescessário: 5 DiverSika\'s</string>
    <string name="diversika_s_acumuladas_4">DiverSika\'s acumuladas: 4</string>
    <string name="invista_25_diversika_s_e_n_retorne_40_em_7_dias_logados">Invista 25 DiverSika\'s e\n retorne 40 em 7 dias logados</string>
    <string name="descobrir_5_funcion_rios_n_nescess_rios_20_diversika_s">Descobrir 5 funcionários\n nescessários: 20 DiverSika\'s</string>
    <string name="parece_que_ainda_n_o_obtivemos_n_not_cias_sua_seu_contato_ou_n_mudan_as_deve_ser_recente_n_por_favor_aguarde_e_melhore_n_sua_empresa_enquanto_isso">Parece que ainda não obtivemos\n notícias sua, seu contato ou\n mudanças deve ser recente.\n Por favor aguarde e melhore\n sua empresa enquanto isso.</string>
    <string name="aqui_s_o_mostradas_informa_es_n_de_como_a_sua_empresa_evoluiu_n_ap_s_seu_contato_com_a_diversain">Aqui são mostradas informações\n de como a sua empresa evoluiu\n após seu contato com a Diversain</string>
    <string name="a_busca_pela_sua_empresa_n_obteve_um_aumento_em_5">A busca pela sua empresa\n obteve um aumento em 5%</string>
    <string name="cerca_de_20_de_pessoas_n_que_fazem_parte_de_n_minorias_no_brasil_n_procuram_saber_sob_sua_n_empresa">Cerca de 20% de pessoas\n que fazem parte de\n minorias no Brasil\n procuram saber sob sua\n empresa</string>
    <string name="as_reclama_es_de_sua_n_empresa_ca_ram_cerca_de_40">As reclamações de sua\n empresa caíram cerca de 40%</string>
</resources>