<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EDE5"
    tools:context=".tela_de_noticias2">


    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:srcCompat="@drawable/quadradobranco" />

    <TextView
        android:id="@+id/textoNoticia2.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="A diversidade dentro de\n sua empresa aumentou em\n 100%"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="@+id/imageView40"
        app:layout_constraintStart_toStartOf="@+id/imageView40"
        app:layout_constraintTop_toTopOf="@+id/imageView40" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quadradobranco" />

    <TextView
        android:id="@+id/textoNoticia2.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/a_busca_pela_sua_empresa_n_obteve_um_aumento_em_5"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView41"
        app:layout_constraintEnd_toEndOf="@+id/imageView41"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/imageView41"
        app:layout_constraintTop_toTopOf="@+id/imageView41" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704"
        app:srcCompat="@drawable/quadradobrancomaior" />

    <TextView
        android:id="@+id/textoNoticia2.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/cerca_de_20_de_pessoas_n_que_fazem_parte_de_n_minorias_no_brasil_n_procuram_saber_sob_sua_n_empresa"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="@+id/imageView35"
        app:layout_constraintStart_toStartOf="@+id/imageView35"
        app:layout_constraintTop_toTopOf="@+id/imageView35" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        app:srcCompat="@drawable/quadradobranco" />


    <TextView
        android:id="@+id/textoNoticia2.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/as_reclama_es_de_sua_n_empresa_ca_ram_cerca_de_40"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView43"
        app:layout_constraintEnd_toEndOf="@+id/imageView43"
        app:layout_constraintStart_toStartOf="@+id/imageView43"
        app:layout_constraintTop_toTopOf="@+id/imageView43" />

    <TextView
        android:id="@+id/textoNoticia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="Aqui são mostradas informações\n de como a sua empresa evoluiu\n após seu contato com a Diversain: "
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />


    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="23dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/imagem_de_usuario" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/setinha" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/simbolo" />

</androidx.constraintlayout.widget.ConstraintLayout>